force-app/main/default/objects/BWP_Payment__c/BWP_Payment__c.object-meta.xml
<CustomObject>
    <label>BWP Payment</label>
    <nameField>
        <displayFormat>PYMT-{0000}</displayFormat>
        <label>Payment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BWP Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>