force-app/main/default/objects/BWP_Payment__c/fields/Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Refunded__c</fullName>
    <description>Amount in cents refunded (can be less than the amount attribute on the charge if a partial refund was issued).</description>
    <label>Amount Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>