force-app/main/default/objects/BWP_Payment__c/fields/Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee__c</fullName>
    <description>The application fee (if any) for the charge. See the Connect documentation for details.</description>
    <label>Application Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>