force-app/main/default/objects/BWP_Payment__c/fields/Captured__c.field-meta.xml
<CustomField>
    <fullName>Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the charge was created without capturing, this Boolean represents whether it is still uncaptured or has since been captured.</description>
    <label>Is Captured</label>
    <type>Checkbox</type>
</CustomField>