force-app/main/default/objects/BWP_Payment__c/fields/Charge_Status__c.field-meta.xml
<CustomField>
    <fullName>Charge_Status__c</fullName>
    <label>Charge Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>