force-app/main/default/objects/BWP_Payment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>BWP_Customer__c</referenceTo>
    <relationshipLabel>Payments (Breadwinner Payments)</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>