force-app/main/default/objects/BWP_Payment__c/fields/Is_Live_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Live_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the value true if the object exists in live mode or the value false if the object exists in test mode.</description>
    <label>Is Live</label>
    <type>Checkbox</type>
</CustomField>