force-app/main/default/objects/BWP_Payment__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <externalId>true</externalId>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>