force-app/main/default/objects/BWP_Payment__c/fields/Payment_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fingerprint__c</fullName>
    <label>Payment Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>