force-app/main/default/objects/BWP_Payment__c/fields/Receipt_Email__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Email__c</fullName>
    <description>This is the email address that the receipt for this charge was sent to.</description>
    <label>Receipt Email</label>
    <type>Email</type>
</CustomField>