force-app/main/default/objects/BWP_Payment__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <description>This is the transaction number that appears on email receipts sent for this charge. This attribute will be null until a receipt has been sent.</description>
    <label>Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>