force-app/main/default/objects/BWP_Payment__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <description>This is the URL to view the receipt for this charge. The receipt is kept up-to-date to the latest state of the charge, including any refunds. If the charge is for an Invoice, the receipt will be stylized as an Invoice receipt.</description>
    <label>Receipt URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>