force-app/main/default/objects/BWP_Payment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For most Stripe users, the source of every charge is a credit or debit card. This hash is then the card object describing that card.</description>
    <label>Payment Method</label>
    <referenceTo>BWP_Payment_Method__c</referenceTo>
    <relationshipName>Stripe_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>